# ai_sdr_agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docs/: architecture.md  design.html
reports/: ingestion_report.md
reports/outreach_runs/: laura-schmidt-northwind-example.md
reports/research_profiles/: laura-schmidt-northwind-example.md
src/ai_sdr/: __init__.py  api.py  config.py  observability.py  pipeline.py  reporting.py  sample_leads.py  schemas.py  storage.py
src/ai_sdr/db/: mongo.py  postgres.py
src/ai_sdr/evaluation/: __init__.py  outreach.py  ragas_export.py
src/ai_sdr/ingestion/: __init__.py  enrich.py  sources.py
src/ai_sdr/jobs/: __init__.py  queue.py  tasks.py  worker.py
src/ai_sdr/llm/: groq_client.py
src/ai_sdr/memory/: __init__.py  lead_memory.py  search.py
src/ai_sdr/outreach/: __init__.py  graph.py  reply.py  reviewer.py  scheduling.py  workflow.py  writer.py
src/ai_sdr/research/: __init__.py  profile.py
src/ai_sdr/web/: index.html
